# yagraphc

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: doctests.yml  linting.yml  quickstart.yml  tests.yml
src/: graph.rs  lib.rs  main.rs
src/graph/: traits.rs
