[package]
name = "yagraphc"
version = "0.1.0"
edition = "2021"
description = "Crate for working with Graph data structures and common algorithms on top of it."
readme = "README.md"
license = "MIT"
repository = "https://github.com/AloizioMacedo/yagraphc"
keywords = ["graph", "data-structure", "algorithm", "path", "mathematics"]
categories = ["algorithms", "data-structures", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.52"
